Add comment Info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculater</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="js.js">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 <body>
@@ -38,6 +37,7 @@
             </div>
         </form>
     </div>
+    This is link of Script file That is attached with HTML code
     <script src="js.js"></script>
 </body>
 </html>
